--- a/rsc-win/rsc-win/app.config
+++ b/rsc-win/rsc-win/app.config
@@ -5,9 +5,9 @@
 	</startup>
   <appSettings >
     <add key="homeUrl" value="http://www.rsc365.com"/>
-    <add key="ie9" value="下载IE9浏览器,http://www.baidu.com"/>
-    <add key="qq" value="下载QQ浏览器,http://www.qq.com"/>
-    <add key="firefox" value="下载火狐浏览器,http://www.rsc365.com"/>
-    <add key="google" value="下载谷歌浏览器,http://www.baidu.com"/>
+    <add key="ie9" value="下载IE9浏览器,http://rj.baidu.com/soft/detail/23356.html"/>
+    <add key="qq" value="下载QQ浏览器,http://rj.baidu.com/soft/detail/16490.html"/>
+    <add key="firefox" value="下载火狐浏览器,http://rj.baidu.com/soft/detail/11843.html"/>
+    <add key="google" value="下载谷歌浏览器,http://rj.baidu.com/soft/detail/14744.html"/>
   </appSettings>
 </configuration>
