--- a/rsc-win/rsc-win/app.config
+++ b/rsc-win/rsc-win/app.config
@@ -1,13 +1,26 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-	<startup>
-		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
-	</startup>
-  <appSettings >
-    <add key="homeUrl" value="http://www.rsc365.com"/>
-    <add key="ie9" value="下载IE9浏览器,http://rj.baidu.com/soft/detail/23356.html"/>
-    <add key="qq" value="下载QQ浏览器,http://rj.baidu.com/soft/detail/16490.html"/>
-    <add key="firefox" value="下载火狐浏览器,http://rj.baidu.com/soft/detail/11843.html"/>
-    <add key="google" value="下载谷歌浏览器,http://rj.baidu.com/soft/detail/14744.html"/>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
+  </startup>
+  <appSettings>
+    <add key="homeUrl" value="http://www.rsc365.com" />
+    <add key="ie9" value="下载IE9浏览器,http://rj.baidu.com/soft/detail/23356.html" />
+    <add key="qq" value="下载QQ浏览器,http://rj.baidu.com/soft/detail/16490.html" />
+    <add key="firefox" value="下载火狐浏览器,http://rj.baidu.com/soft/detail/11843.html" />
+    <add key="google" value="下载谷歌浏览器,http://rj.baidu.com/soft/detail/14744.html" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
+  <system.web>
+    <membership defaultProvider="ClientAuthenticationMembershipProvider">
+      <providers>
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
+      </providers>
+    </membership>
+    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
+      <providers>
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
+      </providers>
+    </roleManager>
+  </system.web>
 </configuration>
